src/objects/Budget_Opp__c.object
<CustomObject>
    <description>R5- This object mainly used to group different Opportunities and link it to Account Plan</description>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <description>R5-ABB Sales Stage</description>
        <label>ABB Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Primary_Address_Country__c</fullName>
        <label>Account Customer Primary Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Budgeted_Opportunties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>AccountPlanBudgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Budgets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - BU</description>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 -Commit</description>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <description>R5- Confidence Level</description>
        <label>Confidence Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 -DIV</description>
        <label>DIV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Award_Date__c</fullName>
        <description>R5 - Expected Award Date</description>
        <label>Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freeze_Account_Plan_Budgets__c</fullName>
        <description>R5 - Formula field used for Trigger</description>
        <formula>Account_Plan__r.Freeze_Account_Plan_Budgets__c</formula>
        <label>Freeze Account Plan Budgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Include</description>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Opportunity name field for Budget</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>R5 - Field to display the Opportunity Owner from opportunity object</description>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_USD__c</fullName>
        <label>Opportunity Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <description>R5- Opportunity Value</description>
        <label>Opportunity Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipName>Budgets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Target</description>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <label>Budgeted Opportunities</label>
    <nameField>
        <displayFormat>OPP-BGT-{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgeted Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Budget_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 If Account Plan Status is Closed, the user should not edit the Budget.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>